# prime-checker

./: .gitignore  README.md  pyproject.toml
src/prime_checker/: __init__.py  core.py
tests/: test_prime_checker.py
